<resources>
    <string name="app_name">DemoApp</string>
    <string name="welcomeString1">WELCOME\nto\nSmart Food Court System</string>
    <string name="welcomeString2">The best way to get best food.\nLet\'s get start!</string>
    <string name="forgotpassword"><u>Forgot password?</u></string>
    <string name="back">Back</string>
    <string name="name">Smart Food Court System</string>
    <string name="welcometext">W E L C O M E</string>
    <string name="logo">Logo</string>
    <string name="sigintocontinue">Sign in to continue</string>
    <string name="userexample">user123</string>
    <string name="export_report">Export report</string>
</resources>
