<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
        <!--Back button-->
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back"
            android:contentDescription="@string/back"
            android:onClick="backToMain" />

        <!--Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/name"
            android:textColor="#040087"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!--Logo-->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <!--Welcome Text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:text="@string/welcometext"
            android:textColor="#040087"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:text="@string/sigintocontinue"
            android:textColor="#9FA0A4"
            android:textStyle="bold" />

        <!--Username-->
        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            android:background="@drawable/edittextborder"
            android:hint="Enter your user name"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#707070" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="290dp"
            android:background="#FFFFFF"
            android:text="User name"
            android:textColor="#00197B" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="306dp"
            android:src="@drawable/username" />

        <!--Password-->
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="375dp"
            android:background="@drawable/edittextborder"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#707070" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="365dp"
            android:background="#FFFFFF"
            android:text="Password"
            android:textColor="#00197B" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="381dp"
            android:src="@drawable/password" />

        <!--Forgot password-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="425dp"
            android:text="@string/forgotpassword"
            android:textColor="@drawable/clickabletext"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!--Message Fail-->
        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="475dp"
            android:textColor="#F00" />

        <!--Login button-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="500dp"
            android:background="@drawable/loginbtn"
            android:onClick="displayLoginPop" />

        <!--Create account-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="53dp"
            android:layout_marginTop="550dp"
            android:text="Don't have an account?"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/createtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="550dp"
            android:clickable="true"
            android:onClick="signupActivity"
            android:text="Create a new account"
            android:textColor="@drawable/clickabletext"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>