<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">
        <!--Back button-->
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/backbtn"
            android:contentDescription="@string/back"
            android:onClick="backToMain" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:textColor="#040087"
            android:textSize="27sp"
            android:textStyle="bold" />

        <!--Logo-->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <!--Create account-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:text="Create account"
            android:textColor="#040087"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:text="Create a new account"
            android:textColor="#9FA0A4"
            android:textStyle="bold" />

        <!--Username-->
        <EditText
            android:id="@+id/usernameEdt"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:background="@drawable/edittextborder"
            android:hint="Enter your user name"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#707070" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="240dp"
            android:background="#FFFFFF"
            android:text="User name"
            android:textColor="#00197B" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="256dp"
            android:src="@drawable/username" />

        <!--Password-->
        <EditText
            android:id="@+id/passwordEdt"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="315dp"
            android:background="@drawable/edittextborder"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#707070" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="305dp"
            android:background="#FFFFFF"
            android:text="Password"
            android:textColor="#00197B" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="321dp"
            android:src="@drawable/password" />

        <!--Confirm password-->
        <EditText
            android:id="@+id/confirmPasswordEdt"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="375dp"
            android:background="@drawable/edittextborder"
            android:hint="Confirm your password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#707070" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="365dp"
            android:background="#FFFFFF"
            android:text="Confirm password"
            android:textColor="#00197B" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="381dp"
            android:src="@drawable/confirmpassword" />

        <!--Phone number-->
        <EditText
            android:id="@+id/phoneEdt"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="435dp"
            android:background="@drawable/edittextborder"
            android:hint="Enter your phone number"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#707070" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="425dp"
            android:background="#FFFFFF"
            android:text="Phone number"
            android:textColor="#00197B" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="441dp"
            android:src="@drawable/phone_icon" />

        <!--Email-->
        <EditText
            android:id="@+id/emailEdt"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="495dp"
            android:background="@drawable/edittextborder"
            android:hint="Enter your email"
            android:maxLines="1"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#707070" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="485dp"
            android:background="#FFFFFF"
            android:text="Email"
            android:textColor="#00197B" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="501dp"
            android:src="@drawable/gmail_icon" />

        <!--Message-->
        <TextView
            android:id="@+id/messageSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="550dp"
            android:textColor="#F00" />
        <!--Name-->

        <!--Create account button-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="575dp"
            android:background="@drawable/createbtn"
            android:onClick="createAccount" />

        <!--Login-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="625dp"
            android:text="Already have an account?"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="265dp"
            android:layout_marginTop="625dp"
            android:clickable="true"
            android:onClick="loginActivity"
            android:text="Login"
            android:textColor="@drawable/clickabletext"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>